--- a/demo_godot_midi/.godot/editor/editor_layout.cfg
+++ b/demo_godot_midi/.godot/editor/editor_layout.cfg
@@ -18,7 +18,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://assets/audio/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/audio/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/audio/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
